src-tauri/check_final_retry.txt
    Checking mega-brisas v1.0.0-alpha (C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri)
error[E0308]: mismatched types
   --> src\domain\motor_validacion.rs:119:28
    |
119 |             gafete_numero: common.gafete_activo_numero.clone().unwrap_or_default(),
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `i32`
    |
help: try using a conversion method
    |
119 |             gafete_numero: common.gafete_activo_numero.clone().unwrap_or_default().to_string(),
    |                                                                                   ++++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `mega-brisas` (lib) due to 1 previous error
